# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"


# =============================================================================
# Dependencies
# =============================================================================


# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"           # Framework for testing
pytest-cov = "^6.0.0"       # Code coverage for tests
black = "^24.8.0"           # Code formatter
flake8 = "^7.1.0"           # Linter for code quality
mypy = "^1.14.1"            # Static type checker
sphinx = "^8.0.2"           # Documentation generator
isort = "^5.10.1"           # Import sorter
tox = "^4.4.6"              # Testing multiple environments
pre-commit = "^4.0.1"       # Pre-commit hooks for linting and formatting


# =============================================================================
# Build System
# =============================================================================
